force-app/main/default/objects/HT_Bond_Tracking__c/HT_Bond_Tracking__c.object-meta.xml
<CustomObject>
    <label>Bond Tracking</label>
    <nameField>
        <displayFormat>BT-{000000}</displayFormat>
        <label>Bond  Tracking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bond Trackings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>