force-app/main/default/objects/HT_Bond_Tracking__c/fields/Bond_Co_Email__c.field-meta.xml
<CustomField>
    <fullName>Bond_Co_Email__c</fullName>
    <label>Bond Co Email</label>
    <type>Email</type>
</CustomField>