force-app/main/default/objects/HT_Bond_Tracking__c/fields/Bond_Co_Phone__c.field-meta.xml
<CustomField>
    <fullName>Bond_Co_Phone__c</fullName>
    <label>Bond Co Phone</label>
    <type>Phone</type>
</CustomField>