force-app/main/default/objects/HT_Bond_Tracking__c/fields/Bond_Co_Representative__c.field-meta.xml
<CustomField>
    <fullName>Bond_Co_Representative__c</fullName>
    <label>Bond Co Representative</label>
    <length>255</length>
    <type>Text</type>
</CustomField>