force-app/main/default/objects/HT_Bond_Tracking__c/fields/Bond_Company__c.field-meta.xml
<CustomField>
    <fullName>Bond_Company__c</fullName>
    <label>Bond Company</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>McGriff</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>