force-app/main/default/objects/HT_Bond_Tracking__c/fields/Bond_Date_Issued__c.field-meta.xml
<CustomField>
    <fullName>Bond_Date_Issued__c</fullName>
    <label>Bond Date Issued</label>
    <type>Date</type>
</CustomField>