force-app/main/default/objects/HT_Bond_Tracking__c/fields/Bond_Date_Requested__c.field-meta.xml
<CustomField>
    <fullName>Bond_Date_Requested__c</fullName>
    <label>Bond Date Requested</label>
    <type>Date</type>
</CustomField>