force-app/main/default/objects/HT_Bond_Tracking__c/fields/Bond_Description__c.field-meta.xml
<CustomField>
    <fullName>Bond_Description__c</fullName>
    <label>Bond Description</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Encroachment</fullName>
            </value>
            <value>
                <fullName>Right-of-way</fullName>
            </value>
            <value>
                <fullName>Highway/Highway Permit</fullName>
            </value>
            <value>
                <fullName>Nortary Public Commission</fullName>
            </value>
            <value>
                <fullName>Driveway</fullName>
            </value>
            <value>
                <fullName>License/Permit</fullName>
            </value>
            <value>
                <fullName>Landscaping, Grading &amp; Storm</fullName>
            </value>
            <value>
                <fullName>Special Use</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Highway</fullName>
            </value>
            <value>
                <fullName>Landscaping</fullName>
            </value>
            <value>
                <fullName>Tower Removal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>