force-app/main/default/objects/HT_Bond_Tracking__c/fields/Bond_Description_Notes__c.field-meta.xml
<CustomField>
    <fullName>Bond_Description_Notes__c</fullName>
    <label>Bond Description Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>