force-app/main/default/objects/HT_Bond_Tracking__c/fields/Bond_Number__c.field-meta.xml
<CustomField>
    <fullName>Bond_Number__c</fullName>
    <label>Bond Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>