force-app/main/default/objects/HT_Bond_Tracking__c/fields/Bond_Premium__c.field-meta.xml
<CustomField>
    <fullName>Bond_Premium__c</fullName>
    <label>Bond Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>