force-app/main/default/objects/HT_Bond_Tracking__c/fields/CON_CO_EMAIL__c.field-meta.xml
<CustomField>
    <fullName>CON_CO_EMAIL__c</fullName>
    <label>CON CO EMAIL</label>
    <type>Email</type>
</CustomField>