force-app/main/default/objects/HT_Bond_Tracking__c/fields/General_Notes__c.field-meta.xml
<CustomField>
    <fullName>General_Notes__c</fullName>
    <label>General Notes</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>