force-app/main/default/objects/HT_Bond_Tracking__c/fields/JX_Permit__c.field-meta.xml
<CustomField>
    <fullName>JX_Permit__c</fullName>
    <label>JX Permit#</label>
    <length>255</length>
    <type>Text</type>
</CustomField>