force-app/main/default/objects/HT_Bond_Tracking__c/fields/JX_Permit_Type__c.field-meta.xml
<CustomField>
    <fullName>JX_Permit_Type__c</fullName>
    <label>JX Permit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Building</fullName>
            </value>
            <value>
                <fullName>Electrical</fullName>
            </value>
            <value>
                <fullName>Zoning</fullName>
            </value>
            <value>
                <fullName>Driveway</fullName>
            </value>
            <value>
                <fullName>ROW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>