force-app/main/default/objects/HT_Bond_Tracking__c/fields/Obligee__c.field-meta.xml
<CustomField>
    <fullName>Obligee__c</fullName>
    <label>Obligee</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>