force-app/main/default/objects/HT_Bond_Tracking__c/fields/Obligee_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Obligee_Contact_Email__c</fullName>
    <label>Obligee Contact Email</label>
    <type>Email</type>
</CustomField>