force-app/main/default/objects/HT_Bond_Tracking__c/fields/Obligee_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Obligee_Contact_Name__c</fullName>
    <label>Obligee Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>