force-app/main/default/objects/HT_Bond_Tracking__c/fields/Obligee_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Obligee_Contact_Phone__c</fullName>
    <label>Obligee Contact Phone</label>
    <type>Phone</type>
</CustomField>