force-app/main/default/objects/HT_Bond_Tracking__c/fields/Requestor_Name__c.field-meta.xml
<CustomField>
    <fullName>Requestor_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requestor Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Bond_Trackings</relationshipName>
    <type>Lookup</type>
</CustomField>