force-app/main/default/objects/HT_Bond_Tracking__c/fields/Type_Of_Bond__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_Bond__c</fullName>
    <label>Type Of Bond</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Permanent</fullName>
            </value>
            <value>
                <fullName>Non-Permanent</fullName>
            </value>
            <value>
                <fullName>Non Permanent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>